Adds a version selector on the map settings
The selector is not working yet.

--- a/app/assets/stylesheets/layouts/management/l-page-creation.scss
+++ b/app/assets/stylesheets/layouts/management/l-page-creation.scss
@@ -76,6 +76,10 @@
     .CodeMirror {
       height: calc(100vh - 502px);
     }
+
+    .c-select {
+      display: inline-block;
+    }
   }
 
   &.-analysis-dashboard,
