--- a/app/views/management/page_steps/map.html.erb
+++ b/app/views/management/page_steps/map.html.erb
@@ -1,13 +1,13 @@
 <% content_for :extended_header do %>
-    <div class="c-extended-header">
-      <div class="wrapper">
-        <div class="description">
-          <h1>Map</h1>
-          <p>Update this JSON to update the map's look and features.</p>
-        </div>
-        <div></div>
+  <div class="c-extended-header">
+    <div class="wrapper">
+      <div class="description">
+        <h1>Map</h1>
+        <p>Update this JSON to update the map's look and features.</p>
       </div>
+      <div></div>
     </div>
+  </div>
 <% end %>
 
 <%= render partial: 'shared/navigation_header', locals: \
@@ -17,14 +17,22 @@
 <%= form_for(@page, url: wizard_path, method: :put, :html => {:class => 'js-form'}) do |f| %>
   <div class="l-page-creation -map">
     <div class="wrapper">
-        <div class="c-inputs-container -large">
-          <%= f.fields_for :content, OpenStruct.new(@page.content) do |ff| %>
-            <div class="container">
-              <%= ff.label :settings, 'Map settings' %>
-              <%= ff.text_area :settings, class: 'js-editor' %>
+      <div class="c-inputs-container -large">
+        <%= f.fields_for :content, OpenStruct.new(@page.content) do |ff| %>
+          <div class="container">
+            <label for="version">Version</label>
+            <div class="c-select -small">
+              <select id="version">
+                <option value="1.1.10" selected>1.1.10</option>
+              </select>
             </div>
-          <% end %>
-        </div>
+          </div>
+          <div class="container">
+            <%= ff.label :settings, 'Map settings' %>
+            <%= ff.text_area :settings, class: 'js-editor' %>
+          </div>
+        <% end %>
+      </div>
     </div>
   </div>
 
