Improves the dashboard's resilience and translation
- If Vega's runtime fails to parse the spec, a notification appears
- If no data, a text is shown instead of the table
- If no data, a special type of graph is loaded
- Graphs can now be translated (switched from the Canvas to the SVG renderer)

--- a/app/assets/stylesheets/layouts/shared/l-analysis-dashboard.scss
+++ b/app/assets/stylesheets/layouts/shared/l-analysis-dashboard.scss
@@ -155,6 +155,10 @@ $secondary-container-initial-width: 400px;
   .table {
     max-width: $media-max-width;
     margin: 0 auto;
+
+    > .no-data {
+      text-align: center;
+    }
   }
 
   .map {
