Makes sure the correct font is used for the empty chart
Actually, we don't have to set the font property at all as it is inherited from the base styles.

--- a/app/assets/javascripts/templates/front/charts/empty.hbs
+++ b/app/assets/javascripts/templates/front/charts/empty.hbs
@@ -112,8 +112,7 @@
           "fill": {"value": "#555"},
           "align": {"value": "center"},
           "baseline": {"value": "middle"},
-          "fontSize": {"value": 12},
-          "font": {"value": "Fira Sans"}
+          "fontSize": {"value": 12}
         }
       }
     }
