Fixes an style issue with the bookmarks
When hovered on (at least) Safari, the name of the bookmarks would be placed on two lines. To avoid the issue, the width of the button has been increased by 1px.

--- a/app/assets/stylesheets/components/shared/c-dashboard-bookmarks.scss
+++ b/app/assets/stylesheets/components/shared/c-dashboard-bookmarks.scss
@@ -136,7 +136,10 @@
 
         @media #{$mq-tablet} {
           left: -40px;
-          width: calc(100% + 80px);
+          // The 1px difference below is due to the fact that for some reason
+          // Safari (at least) requires it to prevent the content of the button
+          // to be placed on two lines
+          width: calc(100% + 81px);
         }
 
         > button {
