adds mobile scroll to dropdown

--- a/app/assets/stylesheets/components/shared/c-dropdown-selector.scss
+++ b/app/assets/stylesheets/components/shared/c-dropdown-selector.scss
@@ -23,6 +23,7 @@
     z-index: 15;
     pointer-events: none;
     overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
 
     &::before {
       display: block;
