--- a/app/assets/javascripts/templates/admin/urls-input.hbs
+++ b/app/assets/javascripts/templates/admin/urls-input.hbs
@@ -4,13 +4,13 @@
       <input type="hidden" value="{{id}}" name="{{../inputName}}[{{@index}}][id]">
     {{/if}}
     <label for="url-{{../urls.length}}">{{#if @index}}Additional URL{{else}}Main URL{{/if}}</label>
-    <input type="url" value="{{url}}" class="js-input" placeholder="https://www.my-site.com" data-id="{{@index}}" name="{{../inputName}}[{{@index}}][host]" id="url-{{../urls.length}}">
+    <input value="{{url}}" class="js-input" placeholder="https://www.my-site.com" data-id="{{@index}}" name="{{../inputName}}[{{@index}}][host]" id="url-{{../urls.length}}">
     <button type="button" class="remove-url js-remove-url" data-id="{{@index}}">Remove</button>
   </div>
 {{/each}}
 <div class="container">
   <label for="url-0">{{#if urls.length}}Additional URL{{else}}Main URL{{/if}}</label>
-  <input type="url" value="" class="js-input" placeholder="{{#if urls.length}}https://www.my-site.com{{else}}https://www.mysite.com{{/if}}" name="{{inputName}}[{{urls.length}}][host]" id="url-0">
+  <input value="" class="js-input" placeholder="{{#if urls.length}}https://www.my-site.com{{else}}https://www.mysite.com{{/if}}" name="{{inputName}}[{{urls.length}}][host]" id="url-0">
 </div>
 <footer>
   <button type="button" class="add-url js-add-url">Add URL</button>
