--- a/app/assets/stylesheets/components/front/c-cover.scss
+++ b/app/assets/stylesheets/components/front/c-cover.scss
@@ -72,9 +72,9 @@
 
   .cover-attribution {
     position: absolute;
-    left: 0;
+    right: 0;
     bottom: 0;
-    padding: 0 0 0 15px;
+    padding: 0 3px 3px 0;
     color: white;
     z-index: 2;
 
