--- a/app/views/front/_cover.html.erb
+++ b/app/views/front/_cover.html.erb
@@ -3,13 +3,12 @@
     <h2 class="cover-title"><%= @site_page.name %></h2>
   </div>
   <div class="cover-attribution">
-
-    <% if defined?(link) && defined?(value) %>
-    <a href="<%= link %>"> <%= value %> </a>
+    <% if image.instance.attribution_link.present? && image.instance.attribution_label.present? %>
+    <a href="<%= image.instance.attribution_link %>"> <%= image.instance.attribution_label %> </a>
     <% end %>
 
-    <% if !defined?(link) && defined?(value) %>
-    <p> <%= value %> </p>
+    <% if !image.instance.attribution_link.present? && image.instance.attribution_label.present? %>
+    <p> <%= image.instance.attribution_label %> </p>
     <% end %>
 
   </div>
