Feature: cover attribution (#151)
* adds attribution label and link to the cover image

* add attibution inputs on admin create site form

* Added new fields to site settings to store attribution link & label

* changes attibution postion and var name

* adds undefined check

--- a/app/views/admin/site_steps/settings.html.erb
+++ b/app/views/admin/site_steps/settings.html.erb
@@ -95,9 +95,15 @@
                     <span>Select file</span>
                   </div>
                 <% end %>
-                <div class="restrictions js-restrictions">
-                  Recommended dimensions: 1280x500<br />
-                  Max. size: 1MB
+                <div class="file-input-footer">
+                  <div class="restrictions js-restrictions">
+                    Recommended dimensions: 1280x500<br />
+                    Max. size: 1MB
+                  </div>
+                  <div class="cover-attribution">
+                    <%= settings_form.text_field :attribution_label, placeholder: 'Add an attribution label to the image' %>
+                    <%= settings_form.text_field :attribution_link, placeholder: 'Add an attribution link to the image' %>
+                  </div>
                 </div>
               </div>
 
@@ -116,9 +122,15 @@
                     <span>Select file</span>
                   </div>
                 <% end %>
-                <div class="restrictions js-restrictions">
-                  Recommended dimensions: 1280x250<br />
-                  Max. size: 1MB
+                <div class="file-input-footer">
+                  <div class="restrictions js-restrictions">
+                    Recommended dimensions: 1280x250<br />
+                    Max. size: 1MB
+                  </div>
+                  <div class="cover-attribution">
+                    <%= settings_form.text_field :attribution_label, placeholder: 'Add an attribution label to the image' %>
+                    <%= settings_form.text_field :attribution_link, placeholder: 'Add an attribution link to the image' %>
+                  </div>
                 </div>
               </div>
 
