--- a/app/assets/stylesheets/components/front/c-cover.scss
+++ b/app/assets/stylesheets/components/front/c-cover.scss
@@ -39,7 +39,7 @@
     @if $theme == 2 {
       background-color: rgba($color-5, .3);
     } @else {
-      background-color: rgba($color-1, .4);
+      background-color: transparent;
     }
   }
 
