--- a/app/assets/stylesheets/layouts/admin/l-site-creation.scss
+++ b/app/assets/stylesheets/layouts/admin/l-site-creation.scss
@@ -321,4 +321,20 @@
     }
   }
 
+  &.-site-settings {
+    display: flex;
+    align-items: center;
+    min-height: calc(100vh - 300px);
+    padding-top: 50px;
+
+    > .wrapper {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    .c-checkbox {
+      min-height: 30px;
+    }
+  }
+
 }
