--- a/app/views/front/_footer.html.erb
+++ b/app/views/front/_footer.html.erb
@@ -24,6 +24,11 @@
             <svg class="icon icon-Google"><use xlink:href="#icon-Google"></use></svg>
           </a>
         </li>
+        <li class="share-link-item">
+          <a class="share-link -linkedin" href="https://www.linkedin.com/shareArticle?url=<%= request.original_url %>&title=<%= @site_page.name + ' - ' + @site_page.site.name %>&summary=<%= @site_page.description %>" target="_blank">
+            <svg class="icon icon-Linkedin"><use xlink:href="#icon-Linkedin"></use></svg>
+          </a>
+        </li>
       </ul>
     </div>
   </div>
