--- a/app/views/front/_google_analytics.html.erb
+++ b/app/views/front/_google_analytics.html.erb
@@ -1,4 +1,4 @@
-<% unless @site_page.site.site_settings.analytics_key(@site_page.site_id).value.empty? %>
+<% unless @site_page.site.site_settings.analytics_key(@site_page.site_id).value.empty? && ENV.fetch('GLOBAL_GA_KEY', '').empty? %>
     <script>
       (function (i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
@@ -12,8 +12,15 @@
         m.parentNode.insertBefore(a, m)
       })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
+      <% unless @site_page.site.site_settings.analytics_key(@site_page.site_id).value.empty? %>
       ga('create', '<%= @site_page.site.site_settings.analytics_key(@site_page.site_id).value %>', 'auto');
       ga('send', 'pageview');
+      <% end %>
+
+      <% unless ENV.fetch('GLOBAL_GA_KEY', '').empty? %>
+      ga('create', '<%= ENV.fetch('GLOBAL_GA_KEY').empty? %>', 'auto', 'global');
+      ga('global.send', 'pageview');
+      <% end %>
 
     </script>
 <% end %>
