--- a/app/assets/stylesheets/components/front/c-footer.scss
+++ b/app/assets/stylesheets/components/front/c-footer.scss
@@ -1,3 +1,13 @@
+.c-pre-footer {
+  padding: 15px 0;
+
+  @if $theme == 2 {
+    background-color: rgba($color-6, .2);
+  } @else {
+    background-color: rgba($color-1, .2);
+  }
+}
+
 .c-footer {
   padding: 15px 0;
 
