Improve header messages on new steps

--- a/app/views/admin/site_steps/style.html.erb
+++ b/app/views/admin/site_steps/style.html.erb
@@ -2,7 +2,7 @@
   <div class="c-extended-header">
     <div class="wrapper">
       <div class="description">
-        <h1>Customize</h1>
+        <h1>Site Style</h1>
         <p>Select a logo, an icon and two cover images – one for the homepage and the other for the Open Content pages.</p>
       </div>
     </div>
