--- a/app/views/admin/site_steps/template.html.erb
+++ b/app/views/admin/site_steps/template.html.erb
@@ -2,7 +2,7 @@
   <div class="c-extended-header">
     <div class="wrapper">
       <div class="description">
-        <h1>Style</h1>
+        <h1>Template</h1>
         <p>Choose one of the two templates below and its main color</p>
       </div>
     </div>
