--- a/app/views/admin/site_steps/settings.html.erb
+++ b/app/views/admin/site_steps/settings.html.erb
@@ -2,9 +2,8 @@
     <div class="c-extended-header">
       <div class="wrapper">
         <div class="description">
-          <h1>Customize</h1>
-          <p>Select a logo, an icon and two cover images – one for the homepage and the other for the Open Content
-            pages.</p>
+          <h1>Site Settings</h1>
+          <p>Configure other aspects of your site - like translations or contact email address</p>
         </div>
       </div>
     </div>
