Improve handling for static pages

--- a/app/views/management/page_steps/open_content.html.erb
+++ b/app/views/management/page_steps/open_content.html.erb
@@ -2,7 +2,7 @@
   <div class="c-extended-header">
     <div class="wrapper">
       <div class="description">
-        <h1>Open Content</h1>
+        <h1>Page Content</h1>
         <p>Write the content of your page.</p>
       </div>
       <div></div>
