--- a/app/assets/stylesheets/components/management/c-wysiwyg.scss
+++ b/app/assets/stylesheets/components/management/c-wysiwyg.scss
@@ -18,7 +18,7 @@ $wysiwyg-width: $content-max-width + 2 * $wysiwyg-lateral-padding;
   .ql-bubble {
     .ql-toolbar {
       display: flex;
-      justify-content: center ;
+      justify-content: center;
       padding-top: 5px;
 
       .ql-formats {
@@ -153,7 +153,6 @@ $wysiwyg-width: $content-max-width + 2 * $wysiwyg-lateral-padding;
     > .blocks {
       display: none;
     }
-
 
     &.-expanded {
       > button {
@@ -387,6 +386,13 @@ $wysiwyg-width: $content-max-width + 2 * $wysiwyg-lateral-padding;
           }
         }
       }
+    }
+  }
+
+  .ql-editor[contenteditable=true] {
+    .-raw-html {
+      border: 1px dashed rgba(85, 85, 85, 0.3);
+      margin: 30px 0;
     }
   }
 }
