--- a/app/views/layouts/management.html.erb
+++ b/app/views/layouts/management.html.erb
@@ -10,6 +10,8 @@
   <script src="//cdn.quilljs.com/1.2.0/quill.js" type="text/javascript"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.22.2/codemirror.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.22.2/mode/javascript/javascript.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.22.2/mode/xml/xml.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.24.2/addon/edit/closetag.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pica/2.0.8/pica.min.js" type="text/javascript"></script>
   <%= javascript_include_tag 'management', 'data-turbolinks-track': 'reload' %>
   <%= favicon_link_tag %>
