--- a/app/assets/stylesheets/components/management/c-wysiwyg.scss
+++ b/app/assets/stylesheets/components/management/c-wysiwyg.scss
@@ -391,8 +391,19 @@ $wysiwyg-width: $content-max-width + 2 * $wysiwyg-lateral-padding;
 
   .ql-editor[contenteditable=true] {
     .-raw-html {
+      position: relative;
       border: 1px dashed rgba(85, 85, 85, 0.3);
       margin: 30px 0;
+
+      &:before {
+        content: 'HTML';
+        left: -1px;
+        top: -19px;
+        position: relative;
+        border-radius: 2px 2px 0 0;
+        background: rgba(85, 85, 85, 0.3);
+        padding: 0 5px;
+      }
     }
   }
 }
