adds edit behaviour to html blots

--- a/app/assets/javascripts/templates/management/raw-html-modal.hbs
+++ b/app/assets/javascripts/templates/management/raw-html-modal.hbs
@@ -1,7 +1,7 @@
 <div class="content">
   <h1>Insert Html</h1>
 <div class="raw-html">
-  <textarea class="js-raw-html"></textarea>
+  <textarea class="js-raw-html">{{content}}</textarea>
 </div>
 </div>
 
